--- a/url_shortifier/nginx/default.conf
+++ b/url_shortifier/nginx/default.conf
@@ -1,15 +1,22 @@
-upstream django {
+upstream url_shortifier {
   server url_web:8000;
 }
 
-server {
-  listen 80;
-  server_name url_web;
-  access_log /var/log/nginx/eample.log;
+  server {
+      listen 80;
+      server_name 127.0.0.1;
+      access_log /var/log/nginx/example.log;
 
-  location / {
-      root /home/john/url_shortifier/
-    }
-  location /static/ {
-    alias /static/};
-}
+      location /static/ {
+        alias /usr/src/dev_proj/static/;
+      }
+      location /media/ {
+        alias /usr/src/dev_proj/media/;
+      }
+      location / {
+        proxy_pass http://url_shortifier;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded_For  $proxy_add_x_forwarded_for;
+        proxy_set_header Host $server_name;
+      }
+  }
