--- a/url_shortifier/requirements.txt
+++ b/url_shortifier/requirements.txt
@@ -4,6 +4,9 @@ django-filter==2.4.0
 djangorestframework==3.12.2
 gunicorn==20.0.4
 hashids==1.3.1
+Pillow==8.1.2
 psycopg2==2.8.6
 pytz==2021.1
+qrcode==6.1
+six==1.15.0
 sqlparse==0.4.1
