add .env_file into docker-compose.yml

--- a/url_shortifier/docker-compose.yml
+++ b/url_shortifier/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3.7'
 services:
   url_db:
     image: postgres
+    env_file:
+      - .env
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     ports:
