--- a/url_shortifier/nginx/Dockerfile
+++ b/url_shortifier/nginx/Dockerfile
@@ -1,2 +1,4 @@
 FROM nginx:1.19.0-alpine
 COPY ./default.conf etc/nginx/conf.d/default.conf
+COPY ./pretty-url.crt etc/ssl/pretty-url.crt
+COPY ./pretty-url.key etc/ssl/pretty-url.key
