--- a/url_shortifier/nginx/default.conf
+++ b/url_shortifier/nginx/default.conf
@@ -1,22 +1,40 @@
 upstream url_shortifier {
-  server url_web:8000;
+  server url_web: 8000;
 }
 
-  server {
-      listen 80;
-      server_name 127.0.0.1;
-      access_log /var/log/nginx/example.log;
+server {
+  listen 80;
+  server_name pretty-url.ru;
+  return 301 https://pretty-url.ru$request_uri;
+}
 
-      location /static/ {
-        alias /usr/src/dev_proj/static/;
-      }
-      location /media/ {
-        alias /usr/src/dev_proj/media/;
-      }
-      location / {
-        proxy_pass http://url_shortifier;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded_For  $proxy_add_x_forwarded_for;
-        proxy_set_header Host $server_name;
-      }
+
+server {
+  listen 443 ssl;
+  ssl on;
+  ssl_certificate /etc/ssl/pretty-url.crt;
+  ssl_certificate_key /etc/ssl/pretty-url.key;
+  server_name pretty-url.ru;
+  client_max_body_size 100M;
+  gzip on;
+  gzip_vary on;
+  gzip_proxied any;
+  gzip_http_version 1.1;
+  gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript;
+
+
+  access_log /var/log/nginx/example.log;
+
+  location /static/ {
+    alias /usr/src/dev_proj/static/;
   }
+  location /media/ {
+    alias /usr/src/dev_proj/media/;
+  }
+  location / {
+    proxy_pass http://url_shortifier;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded_For  $proxy_add_x_forwarded_for;
+    proxy_set_header Host $server_name;
+  }
+}
