--- a/url_shortifier/nginx/default.conf
+++ b/url_shortifier/nginx/default.conf
@@ -1,10 +1,10 @@
 upstream url_shortifier {
-  server url_web: 8000;
+  server url_web:8000;
 }
 
 server {
   listen 80;
-  server_name pretty-url.ru;
+  server_name 127.0.0.1;
   return 301 https://pretty-url.ru$request_uri;
 }
 
@@ -14,7 +14,7 @@ server {
   ssl on;
   ssl_certificate /etc/ssl/pretty-url.crt;
   ssl_certificate_key /etc/ssl/pretty-url.key;
-  server_name pretty-url.ru;
+  server_name 127.0.0.1;
   client_max_body_size 100M;
   gzip on;
   gzip_vary on;
